fix vertical alignment of voip buttons

--- a/src/skins/vector/css/molecules/RoomHeader.css
+++ b/src/skins/vector/css/molecules/RoomHeader.css
@@ -48,7 +48,6 @@ limitations under the License.
 
 .mx_RoomHeader_textButton {
     height: 48px;
-    margin-top: 18px;
     background-color: #76cfa6;
     border-radius: 48px;
     margin-right: 8px;
